# agent-poi

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  docker-compose.multi-agent.yml  package-lock.json  package.json  test-wallet.json
agent/: .env.example  Dockerfile  config.py  constraints.txt  main.py  multi_main.py  railway.json  render.yaml  requirements.txt
agent/idl/: agent_registry.json  agent_registry_legacy.json  fetched_idl.json
agent/poi/: __init__.py  challenge_handler.py  evaluator.py  key_rotator.py  llm_judge.py  merkle_audit.py  model_verifier.py  question_pools.py
agent/scripts/: verify_agents.py
agent/solana/: client.py
agent/solana_client/: __init__.py  client.py
app/: .gitignore  package-lock.json  package.json  playwright.config.ts
app/e2e/: a2a-focused-screenshot.spec.ts  a2a-network.spec.ts  challenge-create.spec.ts  dashboard.spec.ts  register-agent.spec.ts  wallet-connect.spec.ts
app/public/: skill.json  skill.md
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AgentCard.tsx  (+10 more)
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: errors.rs  lib.rs
programs/agent-registry/src/instructions/: close_challenge.rs  create_challenge.rs  create_collection.rs  expire_challenge.rs  initialize.rs  log_audit.rs  mod.rs  register_agent.rs  submit_response.rs  update_reputation.rs
programs/agent-registry/src/state/: agent.rs  audit.rs  challenge.rs  mod.rs  registry.rs
scripts/: generate-agent-wallets.sh  init-collection.ts  init-registry.ts  local-demo.sh
tests/: agent-registry.ts  merkle-audit.ts
(+11 files in other folders)
