[package]
name = "agent-registry"
version = "0.1.0"
description = "Agent Proof-of-Intelligence Registry for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
